--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<head>
+<html class="page" lang="en">
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nadya Matievskaya CV</title>
@@ -7,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="icon" href="assets/img/favicon.ico" />
     <link rel="stylesheet" href="style.css" />
-    </head>
+  </head>
     <body class="page-body"></body>
     <header>
        <nav class="nav">
